Finished! All functionality added

--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html ng-app='LunchCheck'>
+
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Assignment 1 | Lunch Check</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css">
   <script src="angular.min.js"></script>
   <script src="app.js"></script>
-
 </head>
+
 <body ng-controller='LunchCheckController'>
+
   <h1>Lunch Checker</h1>
   <div class="form-group">
-    <input type="text" id="lunch-menu"
-    placeholder="List comma separated dishes you usually have for lunch"
-    class="form-control"
-    ng-model="dishes">
-  <button type="button" name="button" class="btn btn-success" ng-click="displayMessage();">Check If Too Much</button>
+    <div class="col-sm-6">
+      <input type="text" id="lunch-menu" style="border: 1px solid {{ colour }};"
+             placeholder="List comma separated dishes you usually have for lunch"
+             class="form-control"
+             ng-model="dishes">
+    </div>
+    <button type="button" name="button" class="btn btn-success" ng-click="displayMessage();">Check If Too Much</button>
   </div>
-<div ng-model="totalNoOfDishes" class="form-group message">
-  {{ message }}
-</div>
+
+  <div ng-model="totalNoOfDishes" class="col-sm-6" style="color: {{ colour }};">
+    {{ message }}
+  </div>
+
 </body>
 </html>
