--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Assignment 1 | Lunch Check</title>
-  <link rel="stylesheet" href="/styles/bootstrap.min.css">
-  <script src="angular.min.js"></script>
-  <script src="app.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
 </head>
 
 <body ng-controller='LunchCheckController'>
