--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -17,7 +17,7 @@
   <div class="form-group">
     <div class="col-sm-6">
       <input type="text" id="lunch-menu" style="border: 1px solid {{ colour }};"
-             placeholder="List comma separated dishes you usually have for lunch"
+             placeholder="List comma separated dishes you usually have for lunch. Empty items, i.e. ' ', are not considered to the count."
              class="form-control"
              ng-model="dishes">
     </div>
