--- a/mod4_solution/index.html
+++ b/mod4_solution/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles.css">
 
@@ -24,13 +26,13 @@
   <body>
 
     <h1>My Menu App</h1>
-
     <ul class="nav nav-tabs">
       <li role="presentation" ui-sref-active="active"><a ui-sref="home">Home</a></li>
       <li role="presentation" ui-sref-active="active"><a ui-sref="categories">Categories</a></li>
     </ul>
 
     <ui-view></ui-view>
+    <loading-spinner></loading-spinner>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -48,20 +50,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 
     <!-- Modules -->
-    <script src="src/menuapp.module.js"></script>
-    <script src="src/data.module.js"></script>
+    <script src="src/menuapp/menuapp.module.js"></script>
+    <script src="src/menuapp/data.module.js"></script>
+    <script src="src/spinner/spinner.module.js"></script>
 
     <!-- Routes -->
     <script src="src/routes.js"></script>
 
-    <!-- 'MenuApp' artifacts -->
-
-
     <!-- 'MenuData' artifacts -->
-    <script src="src/menudata.service.js"></script>
-    <script src="src/categories.component.js"></script>
-    <script src="src/items.component.js"></script>
-    <script src="src/category-list.controller.js"></script>
+    <script src="src/menuapp/menudata.service.js"></script>
+    <script src="src/menuapp/categories.component.js"></script>
+    <script src="src/menuapp/items.component.js"></script>
+    <script src="src/menuapp/category-list.controller.js"></script>
+    <script src="src/menuapp/category-items.controller.js"></script>
+
+    <!-- 'Spinner' artifacts -->
+    <script src="src/spinner/loadingspinner.controller.js"></script>
+    <script src="src/spinner/loadingspinner.component.js"></script>
 
   </body>
 </html>
